# VoronoiDiagramGenerator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt
example/: CMakeLists.txt
include/vdg/: DistanceFunction.h  HasElementId.h  Point.h  Site.h  TopologicalVoronoiDiagram.h
include/vdg/DistanceFunction/: DistanceFunction.h  EuclideanDistance.h
include/vdg/Site/: PointSite.h  Site.h
include/vdg/TopologicalVoronoiDiagram/: DcelVoronoiDiagram.h  TopologicalVoronoiDiagram.h
src/: CMakeLists.txt
src/TopologicalVoronoiDiagram/: DcelVoronoiDiagram.cpp
submodule/: CMakeLists.txt
test/: CMakeLists.txt
test/include/mock/: DistanceFunctionMock.h
test/include/stub/: DistanceFunctionStub.h
test/integration_test/: CMakeLists.txt
test/integration_test/src/: CMakeLists.txt
test/integration_test/src/Site/: PointSiteEuclideanDistanceTest.cpp
test/regression_test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt
test/unit_test/include/: TopologicalVoronoiDiagramTest.h
test/unit_test/include/TopologicalVoronoiDiagram/: TopologicalVoronoiDiagram2DTest.h
test/unit_test/src/: CMakeLists.txt  TopologicalVoronoiDiagramTest.cpp
test/unit_test/src/DistanceFunction/: EuclideanDistanceTest.cpp
test/unit_test/src/Site/: PointSiteTest.cpp
test/unit_test/src/TopologicalVoronoiDiagram/: TopologicalVoronoiDiagram2DTest.cpp
